# guard

./: .gitignore  Makefile  cleanup-deprecated.sh  issues.csv
data_plane/tupl_dp/bridge/src/: bridge.rs  enforcement_engine.rs  grpc_server.rs  lib.rs  main.rs  rule_converter.rs  types.rs
deployment/: Dockerfile.security  deploy-local.sh  docker-compose.local.yml
docs/: Enforcement-MCP-SDK.md
docs/implementation/: 01-api-only-v2-plan.md  02-canonicalization-plan.md  08-family-table-deprecation-analysis.md  09-QUICK_START.md  09-v2-policy-installation-plan.md  DEPRECATION_SUMMARY.md  LAYER_MODEL_CORRECTION.md  README-DEPRECATION.md
docs/plans/: 11-guard-mcp-server-client.md
examples/mcp_config/: claude_desktop_api_key.json  claude_desktop_tenant.json
guard_mcp_client/: __init__.py  client.py
management_plane/: pyproject.toml
management_plane/app/: chroma_client.py  ffi_bridge.py  llm_anchor_generator.py  main.py  models.py  rule_installer.py  settings.py  vocab.py
management_plane/app/endpoints/: agents.py  enforcement.py  enforcement_v2.py  health.py  telemetry.py
management_plane/app/services/: __init__.py  canonical_slots.py  canonicalizer.py  dataplane_client.py  intent_encoder.py  policy_converter.py  policy_encoder.py  vocabulary.py
management_plane/mcp_server/: __main__.py  app.py  auth.py  prompts.py  server.py  tools.py
management_plane/mcp_server/prompts/: governed_agent_instructions.yaml
management_plane/tests/: test_canonical_slots.py  test_enforcement_proxy.py  test_mcp_client_integration.py
tmp/: general_mcp_client_prompt.yaml
(+6 files in other folders)
